JrAuLouvre/force-app/main/default/objects/public_voluntary__x/public_voluntary__x.object-meta.xml
<CustomObject>
    <description>public$voluntary</description>
    <externalDataSource>herokudb</externalDataSource>
    <externalName>public$voluntary</externalName>
    <label>public$voluntary</label>
    <pluralLabel>public$voluntary</pluralLabel>
</CustomObject>