JrAuLouvre/force-app/main/default/objects/public_voluntary__x/fields/birthdate__c.field-meta.xml
<CustomField>
    <fullName>birthdate__c</fullName>
    <description>birthdate</description>
    <externalDeveloperName>birthdate</externalDeveloperName>
    <label>birthdate</label>
    <type>Date</type>
</CustomField>