JrAuLouvre/force-app/main/default/objects/public_voluntary__x/fields/confirmationcode__c.field-meta.xml
<CustomField>
    <fullName>confirmationcode__c</fullName>
    <description>confirmationcode</description>
    <externalDeveloperName>confirmationcode</externalDeveloperName>
    <label>confirmationcode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>