JrAuLouvre/force-app/main/default/objects/public_voluntary__x/fields/cookieid__c.field-meta.xml
<CustomField>
    <fullName>cookieid__c</fullName>
    <description>cookieid</description>
    <externalDeveloperName>cookieid</externalDeveloperName>
    <label>cookieid</label>
    <length>36</length>
    <type>Text</type>
</CustomField>