JrAuLouvre/force-app/main/default/objects/public_voluntary__x/fields/lastname__c.field-meta.xml
<CustomField>
    <fullName>lastname__c</fullName>
    <description>lastname</description>
    <externalDeveloperName>lastname</externalDeveloperName>
    <label>lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>