JrAuLouvre/force-app/main/default/objects/public_voluntary__x/fields/preferred_language__c.field-meta.xml
<CustomField>
    <fullName>preferred_language__c</fullName>
    <description>preferred_language</description>
    <externalDeveloperName>preferred_language</externalDeveloperName>
    <label>preferred_language</label>
    <length>2</length>
    <type>Text</type>
</CustomField>