JrAuLouvre/force-app/main/default/objects/public_voluntary__x/fields/registrationstatus__c.field-meta.xml
<CustomField>
    <fullName>registrationstatus__c</fullName>
    <description>registrationstatus</description>
    <externalDeveloperName>registrationstatus</externalDeveloperName>
    <label>registrationstatus</label>
    <length>30</length>
    <type>Text</type>
</CustomField>