JrAuLouvre/force-app/main/default/objects/public_voluntary__x/fields/shiftid__c.field-meta.xml
<CustomField>
    <fullName>shiftid__c</fullName>
    <description>shiftid</description>
    <externalDeveloperName>shiftid</externalDeveloperName>
    <label>shiftid</label>
    <length>36</length>
    <referenceTo>public_shift__x</referenceTo>
    <relationshipLabel>public$voluntary</relationshipLabel>
    <relationshipName>public_voluntary</relationshipName>
    <type>ExternalLookup</type>
</CustomField>