JrAuLouvre/force-app/main/default/objects/public_voluntary__x/fields/telephone__c.field-meta.xml
<CustomField>
    <fullName>telephone__c</fullName>
    <description>telephone</description>
    <externalDeveloperName>telephone</externalDeveloperName>
    <label>telephone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>