JrAuLouvre/force-app/main/default/objects/public_voluntary__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>firstname__c</columns>
    <columns>lastname__c</columns>
    <columns>shiftid__c</columns>
    <columns>registrationstatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>